Finishing the page.

--- a/html/header.html
+++ b/html/header.html
@@ -1,6 +1,6 @@
 <header class="header border-bottom box-shadow">
     <h3 class="header__company-name">
-        BEM Demo
+        BEM
     </h3>
     <div class="header__right">
         <div class="header__navigations">
@@ -9,6 +9,6 @@
             <a class="header__navigations" href="#">Support</a>
             <a class="header__navigations" href="#">Pricing</a>
         </div>
-        <a class="btn btn-outline-primary" href="#">Sign up</a>
+        <a class="btn btn-primary" href="#">Sign up</a>
     </div>
 </header>
