--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <div class="loader" data-component="html/header.html"></div>
+    <div class="loader" data-component="html/pricing.html"></div>
+    <div class="loader" data-component="html/plans.html"></div>
+    <div class="loader" data-component="html/footer.html"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
         // Use this trick to build a "modular" HTML system.
